plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.2'
	id 'io.spring.dependency-management' version '1.1.7'
}

ext.inference4jVersion = '0.7.0'

group = 'net.inference4j'
version = inference4jVersion
description = 'Demo project for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenLocal()
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	implementation "io.github.inference4j:inference4j-spring-boot-starter:${inference4jVersion}"
	implementation("io.github.inference4j:inference4j-genai:${inference4jVersion}") {
		exclude group: 'org.slf4j', module: 'slf4j-nop'
	}
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}

springBoot {
	mainClass = 'net.inference4j.showcase.Inference4jShowcaseApplication'
}

tasks.named('bootRun') {
	jvmArgs '--enable-native-access=ALL-UNNAMED'
}
